--- a/templates/users/controlpanel.html
+++ b/templates/users/controlpanel.html
@@ -17,7 +17,7 @@ refurence
   <div class="row">
     {%- block maincontainer -%}
     <div class="col-xs-12 content-box" id="maincontainer">
-      
+
       <div class="col-xs-12" id="error-msg"></div>
 
       <div class="col-xs-12">
@@ -31,16 +31,18 @@ refurence
 
       <div class="col-xs-12 fill hr"></div>
 
-      <div class="col-lg-2"></div>
-      <div class="col-lg-8">
-      <div class="input-group">
-        <input id="input-create-refurence" type="text" class="form-control" placeholder="Enter name of new refurence...">
-        <span class="input-group-btn">
-          <button id="btn-create-refurence" class="btn btn-default" type="button">Create!</button>
-        </span>
+      <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+          <div class="input-group">
+            <input id="input-create-refurence" type="text" class="form-control" placeholder="Enter name of new refurence...">
+            <span class="input-group-btn">
+              <button id="btn-create-refurence" class="btn btn-default" type="button">Create!</button>
+            </span>
+          </div>
+          <div class="col-lg-2"></div>
+        </div>
       </div>
-      <div class="col-lg-2"></div>
-    </div>
     {% endblock %}
 
     {%- block modals -%}
