--- a/templates/profiles/_content.html
+++ b/templates/profiles/_content.html
@@ -32,7 +32,11 @@ p, td, tr, li {
 }
 </style>
 <style id="links_style">
-a { color :  {{profile.colors[COLOR_HEADERS]}}; }
+a:link { color :  {{profile.colors[COLOR_HEADERS]}}; }
+a:hover { color :  {{profile.colors[COLOR_HEADERS]}}; }
+button > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
+.col-xs-4 > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
+.btn-group > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
 </style>
 <style id="tabs_style">
 .nav-pills>li {
@@ -52,22 +56,22 @@ a { color :  {{profile.colors[COLOR_HEADERS]}}; }
 #inner_container {
   background-color :  transparent;
 }
-.gallery-links {
-  background-color :  {{profile.colors[COLOR_INNER]}};
-}
 .panel {
   background-color :  {{profile.colors[COLOR_INNER]}};
 }
 .panel-heading {
   background-color :  {{profile.colors[COLOR_INNER]}};
 }
+.panel-heading:hover {
+  background-color :  {{profile.colors[COLOR_HEADERS]}};
+}
 </style>
 {% endmacro %}
 
 {% macro render_avatarimg(header) %}
-<!-- <img id="{{AVATAR_IMG}}" class="{% if header.avatar_is_circle %}img-circle{% endif %} avatar-img" src="{{ header.get_avatar_url() }}"> -->
-<img id="{{AVATAR_IMG}}" class="img-circle avatar-img" src="{{
-header.get_avatar_url() }}" width="200px" height="200px">
+<div id="{{AVATAR_IMG}}" class="img-circle avatar-img centered"
+    style="background: url({{header.get_avatar_url()}}) 50% 50% / cover no-repeat;">
+</div>
 {% endmacro %}
 
 {% macro imglink(link, number, editable) %}
@@ -111,11 +115,13 @@ header.get_avatar_url() }}" width="200px" height="200px">
                     {{ render_avatarimg(header) }}
                 </div>
                 </p>
+                <div class="dz-message">
+                  <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
+                  <em> Drop file to change Avatar</em>
+                </div>
             </div>
         {% else %}
-            <p style="text-align: center">
             {{ render_avatarimg(header) }}
-            </p>
         {% endif %}
     </div>
 </div>
@@ -136,23 +142,26 @@ header.get_avatar_url() }}" width="200px" height="200px">
 <div class="panel description-content" id="description-content-{{i}}">
     <div class="panel-heading" contenteditable="True">
         <h4 id="description-title-{{i}}" class="description-title pull-left"> {{ description.get_keys()[i] }} </h4>
-        <button class="btn-xs pull-right btn-delete-description"
+        <button class="btn-xs btn-danger pull-right btn-delete-description"
             id="btn-delete-description-{{i}}" type="button"
-            contenteditable="False"
-            onclick="Sijax.request('del_desc_table', [{num:{{i}} , 'desc_table': getDescriptionTable() }], {'async': false}); refreshDescriptionDropZones();">
+            contenteditable="False">
             <span class="glyphicon glyphicon-remove" aria=hidden="true"></span>
         </button>
     </div>
-    <div class="panel-body">
-        <div class="col-xs-12 dropzone description-drop" id="description-drop-{{i}}">
-            {% for img in description.get_tables()[i].get_image_links() %}
-            <p style="text-align:center"><img src="{{ img }}"> </p>
-            {% endfor %}
-            <div class="dz-message">Drag & drop file to add/change image</div>
+    {% if description.get_tables()[i].get_image_links()[0] %}
+    <div class="panel-body dropzone description-drop" id="description-drop-{{i}}" style="background: url({{description.get_tables()[i].get_image_links()[0]}}) 50% 50% / cover no-repeat; min-height: 500px;">
+    {% else %}
+    <div class="panel-body dropzone description-drop" id="description-drop-{{i}}">
+    {% endif %}
+        <div class="row">
+            <div class="col-xs-6 panel-body-text">
+                <p id="description-body-{{i}}" class="description-body text-editable" contenteditable="{{editable}}">{{ description.get_tables()[i].get_text() }}</p>
+            </div>
+            <div class="col-xs-6"> </div>
         </div>
-        <div class="col-xs-12 fill hr"></div>
-        <div class="col-xs-12">
-            <p id="description-body-{{i}}" class="description-body text-editable" contenteditable="{{editable}}">{{ description.get_tables()[i].get_text() }}</p>
+        <div class="dz-message">
+          <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
+          <em> Drop file to add image to Note</em>
         </div>
     </div>
 </div>
@@ -162,25 +171,25 @@ header.get_avatar_url() }}" width="200px" height="200px">
     {% for i in range(0, description.tables.keys()|length) %}
     <div class="panel description-content" id="description-content-{{i}}">
         <div class="panel-heading" role="tab" id="heading{{i}}">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{i}}" aria-expanded="true" aria-controls="collapse{{i}}">
-                    {{ description.get_keys()[i] }}
-                </a>
-            </h4>
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{i}}" aria-expanded="true" aria-controls="collapse{{i}}">
+                <h4 class="panel-title">{{ description.get_keys()[i] }}</h4>
+            </a>
         </div>
         <div id="collapse{{i}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading{{i}}">
+            {% if description.get_tables()[i].get_image_links()[0] %}
+            <div class="panel-body" style="background: url({{description.get_tables()[i].get_image_links()[0]}}) 50% 50% / cover no-repeat; min-height: 500px;">
+            {% else %}
             <div class="panel-body">
+            {% endif %}
                 <div class="row">
-                    <div class="col-xs-8">
-                        {% for img in description.get_tables()[i].get_image_links() %}
-                        <p style="text-align:center"><img src="{{ img }}"> </p>
-                        {% endfor %}
-
-                    </div>
-                    {% if description.get_tables()[i].get_image_links() %}
-                    {% endif %}
-                    <div class="col-xs-4">
+                    <div class="col-xs-6 panel-body-text" 
+                        {% if not description.get_tables()[i].get_text() %}
+                        style="background-color: transparent;"
+                        {% endif %}
+                        >
                         <p class="text-editable">{{ description.get_tables()[i].get_text() }}</p>
+                    </div>
+                    <div class="col-xs-6">
                     </div>
                 </div>
             </div>
@@ -196,11 +205,12 @@ header.get_avatar_url() }}" width="200px" height="200px">
 {{ render_description_content(description, editable) }}
 </div>
 {% if editable %}
-<p style="text-align:center;">
+<div class="col-xs-12" style="text-align:center;">
 <button id="btn_desc_tbl_add" type="button" class="btn btn-default">
-    <span class="glyphicon glyphicon-plus" aria=hidden="true"> Add A Note</span>
+    <span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
+    Add New Note
 </button>
-</p>
+</div>
 {% endif %}
 {% endmacro %}
 
@@ -208,7 +218,7 @@ header.get_avatar_url() }}" width="200px" height="200px">
 {% for url in gallery.get_image_urls()%}
     <!-- <div class="item" style="background: url({{url}}) 50% 50% no-repeat; /* 50% 50% centers image in div */ background-size: cover;"> -->
         <a href="{{ url }}" title="{{ url }}" data-gallery>
-            <img class="item" src="{{ url }}" alt="">
+            <img class="post" src="{{ url }}" alt="" style="{{gallery.get_image_style(url)}}">
         </a>
   <!-- </div> -->
 {% endfor %}
@@ -218,14 +228,14 @@ header.get_avatar_url() }}" width="200px" height="200px">
 <ul class="nav nav-pills">
   {% for i in range(0, gallery.tables|length) %}
     {% if i == 0 %} <li class="active"> {% else %} <li> {% endif %}
-    <a href="#gallery-tab-{{i}}" data-toggle="tab">{{ gallery.get_table_names()[i] }}</a>
+    <a class="gallery-nav" href="#gallery-tab-{{i}}" data-toggle="tab">{{ gallery.get_table_names()[i] }}</a>
     </li>
   {% endfor %}
 </ul>
 <div class="tab-content text">
 {% for i in range(0, gallery.tables|length) %}
   <div role="tabpanel" class="tab-pane fade {% if i == 0 %}in active{% endif %}" id="gallery-tab-{{i}}">
-        <div class="row masonry-container gallery-links">
+        <div class="row gallery-links posts">
             {{ render_links_gallery(gallery.get_tables()[i]) }}
         </div>
   </div>
@@ -236,24 +246,18 @@ header.get_avatar_url() }}" width="200px" height="200px">
 {% macro render_popovers(profile) %}
 {% for i in range(0, profile.sidebar.img_links|length) %}
 <div id="imglink-popover-content-{{i}}" style="display: none;">
-    <ul class="list-group">
-        <li class="list-group-item">
-            <h4>To Change Button Icon:</h4> drag and drop file onto picture
-        </li>
-        <div class="col-xs-12 fill hr"></div>
-        <li class="list-group-item">
-            <h4>To Change Button URL:</h4>
-        </li>
-        <li class="list-group-item imglink-list">
-        <div class="input-group">
-            <span class="input-group-addon">URL</span>
-            <input type="text" id="input-imglink-href-{{i}}"
-            class="form-control" placeholder="{%if
-            profile.sidebar.img_links[i].link_url %}{{ profile.sidebar.img_links[i].link_url }}{% else %}enter url here (optional){% endif %}">
-            </span>
-        </div>
-        </li>
-    </ul>   
+    <em>To Change Button Icon:</em></br></br>
+    <p> <span class="glyphicon glyphicon-arrow-left" aria=hidden="true"></span> drag and drop file onto picture</p>
+    <div class="col-xs-12 fill hr"></div>
+    <em>To Change Button URL:</em>
+    <div class="input-group">
+        <span class="input-group-addon">URL</span>
+        <input type="text" id="input-imglink-href-{{i}}"
+        class="form-control" placeholder="{%if
+        profile.sidebar.img_links[i].link_url %}{{ profile.sidebar.img_links[i].link_url }}{% else %}enter url here (optional){% endif %}">
+        </span>
+    </div>
+    <div class="col-xs-12 hr"></div>
     <p style="text-align:center'">
         <button id="btn_imglink_submit_{{number}}" class="btn btn-default
             btn-imglink-submit" type="button"
@@ -261,7 +265,7 @@ header.get_avatar_url() }}" width="200px" height="200px">
                 'num': {{i}},
                 'href': $('#input-imglink-href-{{i}}').val()
             }]);">submit</button>
-        <button id="btn-imglink-delete-{{i}}" class="btn btn-default btn-imglink-delete" type="button" 
+        <button id="btn-imglink-delete-{{i}}" class="btn btn-danger btn-imglink-delete" type="button" 
             onclick="Sijax.request('del_imglink', [{ 'num': {{i}} }]);">delete</button>
     </p>
 </div>
@@ -309,6 +313,7 @@ $(function() {
     myDropzone.on("complete", function(file) {
         myDropzone.removeAllFiles();
     });
+
 });
 </script>
 {% endfor %}
