--- a/templates/profiles/detail.html
+++ b/templates/profiles/detail.html
@@ -15,20 +15,21 @@
 {% endblock %}
 
 {% block body_attribs %}
-{% if profile.get_background_url() %}
-style="background: url({{ profile.get_background_url() }}) no-repeat center center fixed; background-size: cover;"
-{% else %}
+{% if profile.bkg_color %}
 style="background: {{ profile.bkg_color }}; background-size: cover;"
+{% else %}
+style="background: url({{ profile.get_background_url() }}) no-repeat center center fixed; background-size: cover;"
 {% endif %}
 {% endblock %}
 
 
 {% block content %}
 
-{% block page_header %}
-{% endblock %}
-
 <div class="container container-fluid content-box-2">
+
+  {% block page_header %}
+  {% endblock %}
+
   <div class="col-xs-12" id="error-msg"></div>
   <div class="row"> <!-- row -->
     <!-- sidebar -->
@@ -57,7 +58,7 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
       {%- endblock -%}
 
       <!-- <div class="col-xs-12 fill-transparent hr"></div> -->
-      <div class="col-xs-12 fill-solid hr"></div>
+      <div class="col-xs-12 hr"></div>
       <!-- END header -->
 
       <!-- child container -->
@@ -68,7 +69,6 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
         {% if profile.description.is_renderable() %}
         {{ content.render_description(profile.description, false) }} 
         {% endif %}
-        <div class="col-xs-12 fill-transparent hr"> </div>
         {%- endblock -%}
         <!-- END description-->
 
@@ -76,7 +76,6 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
         {%- block gallery -%}
         {% if profile.gallery.is_renderable() %}
         {{ content.render_gallery(profile.gallery) }}
-        <div class="col-xs-12 fill-transparent hr"> </div>
         {% endif %}
         {%- endblock -%}
         <!-- END gallery -->
@@ -162,30 +161,9 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
       ]
     }
   });
-
-// init Masonry
-var $container = $('.masonry-container');
-$container.imagesLoaded( function () {
-  $container.masonry({
-    columnWidth: '.item',
-    itemSelector: '.item'
-  });   
-});
 </script>
+
 <script src={{ url_for('static', filename='js/blueimp-gallery.min.js') }} type="text/javascript"></script>
-
-<script>
-//document.getElementById('links').onclick = function (event) {
-$('.gallery-links').on('click', function (event) {
-event = event || window.event;
-var target = event.target || event.srcElement,
-    link = target.src ? target.parentNode : target,
-    options = {index: link, event: event},
-    links = this.getElementsByTagName('a');
-    blueimp.Gallery(links, options);
-});
-
-$('.collapse').collapse();
-$('#collapse0').collapse('show');
-</script>
+<script src={{ url_for('static', filename='js/imagesloaded.pkgd.min.js') }} type="text/javascript"></script>
+<script src={{ url_for('static', filename='js/detail.js') }} type="text/javascript"></script>
 {% endblock %}
