--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -12,6 +12,11 @@
 {{ super() }}
 <link href={{ url_for('static', filename='css/fontselect.css') }} rel='stylesheet' type="text/css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/basic.min.css" rel='stylesheet' type="text/css">
+<style>
+.panel-heading:hover {
+  background-color : inherit;
+}
+</style>
 {%- endblock -%}
 
 {% block page_header %}
@@ -30,13 +35,10 @@
         <div class="col-lg-4">
           <h3>background</h3>
           <div class="col-lg-12 bkg-drop dropzone" id="bkg-drop">
-            <ul class="list-group">
-              <li class="list-group-item">
-              <div class="btn-group-vertical btn-group-xs centered" role="group" aria-label="...">
-                <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
-              </div>
-              </li>
-            </ul>
+            <div class="dz-message">
+              <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
+              <em> Drop file to change Background</em>
+            </div>
           </div>
         </div>
         <div class="col-lg-4">
@@ -53,17 +55,11 @@
 {% block sidebar %}
 <div class="col-xs-1 fill" id="sidebar_container" style="margin-right:10px;">
   {{ content.render_sidebar(profile.sidebar, true) }}
-  <ul class="list-group">
-      <li class="list-group-item">
-      <div class="col-xs-12">
-        <div class="btn-group-vertical btn-group-xs centered" role="group" aria-label="...">
-          <button id="btn_sidebar_add_link" class="btn btn-default">
-            <span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
-          </button>
-        </div>
-      </div>
-    </li>
-  </ul>
+  <p style="text-align:center;">
+    <button id="btn_sidebar_add_link" class="btn btn-default">
+      <span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
+    </button>
+  </p>
   <div class="col-xs-12 hr"></div>
 </div>
 {% endblock %}
@@ -76,9 +72,9 @@
 <div class="col-xs-12">
 <div class="btn-toolbar" role="toolbar" aria-label="...">
   <div class="btn-group btn-group-lg">
-    <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-      <a><span class="glyphicon glyphicon-edit" aria=hidden="true"></span> Edit Style</a>
-    </button>
+    <a class="btn btn-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      <span class="glyphicon glyphicon-edit" aria=hidden="true"></span> Edit Style
+    </a>
   </div>
   <div class="btn-group btn-group-lg">
     <a id="btn_saveprofile" class="btn btn-dark" href="{{
@@ -95,7 +91,7 @@
 
 {%- block description -%}
 {{ content.render_description(profile.description, true) }} 
-<div class="col-xs-12 fill-transparent hr"> </div>
+<div class="col-xs-12 fill hr"> </div>
 {%- endblock -%}
 
 {%- block gallery -%}
@@ -137,6 +133,7 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.6/webfont.js"></script>
 <script>
   WebFont.load({
@@ -155,27 +152,8 @@
 <script type="text/javascript">
 {{ g.sijax.get_js()|safe }}
 </script>
+<script src={{ url_for('static', filename='js/imagesloaded.pkgd.min.js') }} type="text/javascript"></script>
 <script type="text/javascript">
-function shadeColor(color, percent) {
-
-    var R = parseInt(color.substring(1,3),16);
-    var G = parseInt(color.substring(3,5),16);
-    var B = parseInt(color.substring(5,7),16);
-
-    R = parseInt(R * (100 + percent) / 100);
-    G = parseInt(G * (100 + percent) / 100);
-    B = parseInt(B * (100 + percent) / 100);
-
-    R = (R<255)?R:255;  
-    G = (G<255)?G:255;  
-    B = (B<255)?B:255;  
-
-    var RR = ((R.toString(16).length==1)?"0"+R.toString(16):R.toString(16));
-    var GG = ((G.toString(16).length==1)?"0"+G.toString(16):G.toString(16));
-    var BB = ((B.toString(16).length==1)?"0"+B.toString(16):B.toString(16));
-
-    return "#"+RR+GG+BB;
-}
 
 $(function() {
     function set_color(id, color) {
@@ -185,16 +163,19 @@ $(function() {
       } else if (id == '{{ COLOR_MAIN }}') {
         $('#sidebar_container').css("background-color", color);
         $('#maincontainer').css("background-color", color);
-        $('.panel-heading').css("background-color", color);
 
       } else if (id == '{{ COLOR_INNER }}') {
         $('.panel').css("background-color", color);
-        $('.gallery-links').css("background-color", color);
-
+        $('.panel-heading').css("background-color", color);
       } else if (id == '{{ COLOR_HEADERS }}') {
         document.getElementById('header_style').innerHTML = "h1, h2, h3, h4, h5 { color :" + color + "}";
-        $('.panel-heading').css("color", color);
         $('.gallery_tab_li').css("color", color);
+        $('.panel-heading:hover').css("background-color", color);
+        $("alink").css("color", color);
+        $("a:hover").css("color", color);
+        $("button > a").css("color", color);
+        $(".col-xs-4 > a").css("color", color);
+        $(".btn-group > a").css("color", color);
 
       }
       else if (id == '{{ COLOR_TEXT }}') {
@@ -266,6 +247,7 @@ $(function() {
 });
 </script>
 
-{{ econtent.render_editablejs() }}
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script> 
+<script type="text/javascript" src={{url_for('static', filename="js/editable.js") }}></script>
 
 {% endblock %}
