updated navbar css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -42,7 +42,7 @@ font-size: 24px; }
   background-color: rgba(20, 20, 20, 0.95);
 }
 
-#collapse-xs {
+#mynavbar {
   background-color: rgba(20, 20, 20, 0.95);
 }
 
