--- a/templates/mobile/profiles/list.html
+++ b/templates/mobile/profiles/list.html
@@ -1,35 +1,31 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="col-xs-12">
- <div class="col-xs-12 blurred-sm" style="text-align:center;">
-     <h1>{{ title }}</h1>
- </div>
- <div class="col-xs-12">
-    {% if profiles|length == 0 %}
-         <div class="col-xs-12 blurred-sm jumbotron" style="text-align:center;">
-            <h2>coming soon...</h2>
-         </div>
-    {% else %}
-    <ul class="list-group">
-        {% for profile in profiles %}
-          <li class="list-group-item fill" style="overflow:hidden; margin:2px">
-            {% if profile.header.get_avatar_url() %}
-            <span class="badge">
-                <img style="max-width:64px" src="{{ profile.header.get_avatar_url() }}"> 
-            </span>
-            {% endif %}
-            <a href="{{ url_for('profiles.detail', slug=profile.username) }}">
-            <h3>{{ profile.header.title }}</h3>
-            </a>
-            <p>
-            {{ profile.header.body }}
-            </p>
-          </li>
-        {% endfor %}
-    </ul>
-    {% endif %}
- </div>
+<div class="row">
+    <div class="col-sm-8 col-sm-offset-2 content-box">
+        <h1 class="text-center" style="padding:20px;">{{ title }}</h1>
+        {% if profiles|length == 0 %}
+        <h2>Nothing to see here.</h2>
+        {% else %}
+        <ul class="list-group profile-list-group">
+            {% for profile in profiles %}
+            <li class="list-group-item">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="{{ url_for('profiles.detail', slug=profile.username) }}">
+                            <img class="media-object img-circle" src="{{ profile.header.get_avatar_url() }}" width="64px" height="64px">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">{{ profile.username }}</h4>
+                        {{ profile.header.body }}
+                    </div>
+                </div>
+            </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </div>
 </div>
 {{ super() }}
 {% endblock %}
